--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,15 +9,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(113, 197, 238);
-  background: linear-gradient(
-    90deg,
-    rgba(113, 197, 238, 1) 0%,
-    rgba(2, 80, 145, 1) 100%
-  );
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background: #025091;
+  background: linear-gradient(90deg, #025091 0%, #0f172a 100%);
 }
